--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head">
+<head th:replace="fragments :: head"> <!--fragment-->
 </head>
 <body>
 
-<div th:replace="fragments :: page-header"></div>
+<div th:replace="fragments :: page-header"></div> <!--fragment-->
 
-<div class="container body-content">
+<div class="container body-content"><!--bootstrap stuff-->
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+    <!-- #strings given my THL will capitalize via typical title rules -->
+    <!--title not provided in init -->
 
-    <form th:action="@{/search/results}">
+    <form th:action="@{/search/results}"> <!--th:action -> where to send POST requests, not implemented yet-->
         <h2>Search by:</h2>
 
         <p>
-            <span th:each="column : ${columns}">
+            <span th:each="column : ${columns}"> <!--iterate columns HashMap passed in-->
+                <!--put in id, value to grab later -->
                 <input
                         type="radio"
                         name="searchType"
@@ -27,7 +30,7 @@
         </p>
 
         <p>
-            <label for="searchTerm">Keyword:</label>
+            <label for="searchTerm">Keyword:</label> <!-- grab2handler: searchTerm, searchType from above -->
             <input type="text" name="searchTerm" id="searchTerm" />
         </p>
 
@@ -37,8 +40,10 @@
     <hr />
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <!-- implement results here, seems they are used in the same html -->
 
 </div>
 
 </body>
 </html>
+<!---->
