Finish SearchController results handler

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,7 +38,7 @@
     </form>
 
     <hr />
-
+    <h3 th:text="${searchTypeChosen}"></h3>
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
     <!-- implement results here, seems they are used in the same html -->
 
