--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,7 +12,7 @@
 
     <!-- TODO #3 - Use the same list display from search.html -->
     <!--Do Repeat Yourself apparently -->
-
+    <div th:replace="search :: listings"></div>
 </div>
 
 </body>
